creating directory structuring

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gilberto Lopes">
-    <meta name="description" content="Portfolio Gilberto - Fullstack developer 💻">
+    <meta name="description" content="Gilberto Lopes - Fullstack developer 💻">
     <meta name="keywords" content=" portfólio, portfolio, gilberto lopes, developer, desenvolvedor, programmer, full stack developer, front-end, back-end, javascript, html, css, nodejs, express">
     <!-- favicon -->
-    <link rel="shortcut icon" href="icons/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/public/assets/icons/favicon/favicon.ico" type="image/x-icon">
     <!-- css desktop -->
-    <link rel="stylesheet" href="css/style_desktop.css">
+    <link rel="stylesheet" href="./src/public/css/style_desktop.css">
     <!-- css mobile -->
-    <link rel="stylesheet" href="css/style_mobile.css" media="screen">
+    <link rel="stylesheet" href="./src/public/css/style_mobile.css" media="screen">
     <!-- icons -->
-    <link rel="stylesheet" href="icons/icons_remix/remixicon.css">
+    <link rel="stylesheet" href="./src/public/assets/icons/icons_remix/remixicon.css">
     <!-- JavaScript -->
-    <script defer src="javascript/scripts.js"></script>
+    <script defer src="./src/public/javascript/scripts.js"></script>
 
     <title>Gilberto Lopes</title>
 
@@ -74,7 +74,7 @@
             <div class="div-ul">
                 <ul>
                     <li>
-                        <img class="img-profile" src="img/gil-transparent-1x1.png" alt="Gilberto Lopes">
+                        <img class="img-profile" src="./src/public/assets/img/gil-transparent-1x1.png" alt="Gilberto Lopes">
                     </li>
                     <li>
                         <div class="container-email">
@@ -152,9 +152,9 @@
                 <i class="ri-html5-fill bx"></i>
                 <i class="ri-css3-fill bx"></i>
                 <i class="ri-javascript-fill bx"></i>
-                <img class="node_36x36px" src="icons/icons_remix/nodejs-line.svg" alt="Node.js">
+                <img class="node_36x36px" src="./src/public/assets/icons/icons_remix/nodejs-line.svg" alt="Node.js">
             </div>
-            <img class="img-dev-home" src="img/dev.png" alt="Developer">
+            <img class="img-dev-home" src="./src/public/assets/img/dev.png" alt="Developer">
         </section>
         
         <!-- SECTION SOBRE MIM -->
@@ -164,7 +164,7 @@
                 <div class="container-texto-sobremim">
                     <h3 class="ola-fulano">👋 Olá, meu nome é Gilberto Lopes</h3>
                     <div class="container-img-developer">
-                        <img class="img-dev-sobremim" src="img/dev.png" alt="Developer">
+                        <img class="img-dev-sobremim" src="./src/public/assets/img/dev.png" alt="Developer">
                         <p>Estou estudando para realizar o maior sonho da minha vida, que é me tornar um programador.</p>
                     </div><br>
                     <p>
@@ -179,7 +179,7 @@
                     </p>
                 </div>
                 <div class="container-img-sobremim">
-                    <img class="img-gil-sobremim" src="img/gil-transparent-1x1.png" alt="Gilberto Lopes">
+                    <img class="img-gil-sobremim" src="./src/public/assets/img/gil-transparent-1x1.png" alt="Gilberto Lopes">
                 </div>
             </div>
         </section>
@@ -194,9 +194,9 @@
                         <i id="html" class="ri-html5-fill bx"></i>
                         <i id="css" class="ri-css3-fill bx"></i>
                         <i id="js" class="ri-javascript-fill bx"></i>
-                        <img id="node" class="node_36x36px" src="icons/icons_remix/nodejs-line96.svg" alt="Node.js">
-                        <img id="git" src="icons/icons_remix/git-logo-96.png" alt="Git">
-                        <img src="icons/icons_remix/tux-full.png" alt="linux" class="tux">
+                        <img id="node" class="node_36x36px" src="./src/public/assets/icons/icons_remix/nodejs-line96.svg" alt="Node.js">
+                        <img id="git" src="./src/public/assets/icons/icons_remix/git-logo-96.png" alt="Git">
+                        <img src="./src/public/assets/icons/icons_remix/tux-full.png" alt="linux" class="tux">
                     </div>
                 </div>
                 <div class="container-soft-skills">
@@ -230,7 +230,7 @@
                         <i class="ri-javascript-fill bx bxl-javascript"></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/calculadora_JS.png" alt="calculadora">
+                        <img src="./src/public/assets/img/calculadora_JS.png" alt="calculadora">
                     </div>
                     <a href="https://developer-gilberto.github.io/calculadora-javascript/" target="_blank" rel="noopener noreferrer">
                         <i class="ri-external-link-line bx-link-external"></i>Visitar projeto
@@ -248,7 +248,7 @@
                         <i class="ri-javascript-fill bx bxl-javascript"></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/portfolio_gilberto.png" alt="Portifólio Gilberto">
+                        <img src="./src/public/assets/img/portfolio_gilberto.png" alt="Portifólio Gilberto">
                     </div>
                     <a href="#home">
                         <i class="ri-external-link-line bx-link-external"></i>
@@ -267,7 +267,7 @@
                         <i class="ri-javascript-fill bx bxl-javascript"></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/biomedica_dhara.png" alt="Projeto Biomédica">
+                        <img src="./src/public/assets/img/biomedica_dhara.png" alt="Projeto Biomédica">
                     </div>
                     <a href="https://developer-gilberto.github.io/dharabiomedica/" target="_blank" rel="noopener noreferrer">
                         <i class="ri-external-link-line bx-link-external"></i>
@@ -285,7 +285,7 @@
                         <i class="ri-css3-fill bx blue3 bxl-css3"></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/portifolio-teste2.png" alt="Projeto Portifólio teste">
+                        <img src="./src/public/assets/img/portifolio-teste2.png" alt="Projeto Portifólio teste">
                     </div>
                     <a href="https://developer-gilberto.github.io/portfolio/" target="_blank" rel="noopener noreferrer">
                         <i class="ri-external-link-line bx-link-external"></i>
@@ -303,7 +303,7 @@
                         <i class="ri-css3-fill bx blue3 bxl-css3"></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/cordel-moderno2.png" alt="Projeto Cordel Moderno">
+                        <img src="./src/public/assets/img/cordel-moderno2.png" alt="Projeto Cordel Moderno">
                     </div>
                     <a href="https://developer-gilberto.github.io/projeto-cordel/" target="_blank" rel="noopener noreferrer">
                         <i class="ri-external-link-line bx-link-external"></i>
@@ -321,7 +321,7 @@
                         <i class="ri-css3-fill bx blue3 bxl-css3"></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/mascote-android2.png" alt="Projeto Mascote Android">
+                        <img src="./src/public/assets/img/mascote-android2.png" alt="Projeto Mascote Android">
                     </div>
                     <a href="https://developer-gilberto.github.io/project-android/" target="_blank" rel="noopener noreferrer">
                         <i class="ri-external-link-line bx-link-external"></i>
