--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </div>
                     </li>
                     <li>
-                        <button class="btn-como-quer-ser-chamado">Como deseja ser chamado?</button>
+                        <button class="btn-como-quer-ser-chamado">Como deseja ser chamado<span class="interrogacao_btn_como_deseja_serChamado"> ?</span></button>
                     </li>
                     <li>
                         <input type="checkbox" id="checkbox_mode_dark_light">
@@ -139,7 +139,8 @@
                 console.<span class="log">log</span><span class="parenteses">(</span><span class="hello_world"><span class="aspas">"</span>Hello World!<span class="aspas">"</span></span><span class="parenteses">)</span>;
             </code>
             <p class="boas-vindas">
-                Estou feliz que você tenha reservado um tempinho para visitar meu site. Seja muito bem vindo(a)! Espero que goste.
+                <span class="bomDiaTardeNoite"></span> <span class="user-name"></span><br>
+                É um prazer receber sua agradável visita ao meu site. Seja muito bem vindo(a)! Espero que goste.
             </p>
             <p class="eu-sou">Eu sou</p>
             <h1 class="gilberto-lopes">Gilberto Lopes</h1>
@@ -162,7 +163,7 @@
             <h2>SOBRE MIM</h2>
             <div class="container-sobre">
                 <div class="container-texto-sobremim">
-                    <h3 class="ola-fulano">👋 Olá, meu nome é Gilberto Lopes</h3>
+                    <h3>👋 Olá<span class="user-name"></span>, meu nome é Gilberto Lopes</h3>
                     <div class="container-img-developer">
                         <img class="img-dev-sobremim" src="./src/public/assets/img/dev.png" alt="Developer">
                         <p>Estou estudando para realizar o maior sonho da minha vida, que é me tornar um programador.</p>
@@ -174,7 +175,7 @@
                         Embora ainda esteja no início da minha caminhada até me tornar um programador, gostaria de ter uma oportunidade para aprimorar minhas habilidades técnicas, aplicar meus conhecimentos em projetos reais junto com outros desenvolvedores, contribuindo com minhas ideias, validando meus conhecimentos e também aprender com outros desenvolvedores.
                     </p><br>
                     <p>
-                        <blockquote>💬"Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é fascinante! <strong>Isso é programação</strong>."</blockquote>
+                        <blockquote>💬 "Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é fascinante! Isso é <strong>programação</strong>."</blockquote>
                         <cite>Lopes, Gilberto 2023</cite>
                     </p>
                 </div>
@@ -220,7 +221,7 @@
         <!-- SECTION PROJETOS -->
         <section id="projetos">
             <h2>PROJETOS</h2>
-            <p class="entao">Aqui você encontra alguns dos projetos que fiz com o objetivo de praticar os conhecimentos que estou adquirindo. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi feito, clique em "Código fonte". Observação: Todos os projetos são responsivos.</p>
+            <p>Então<span class="user-name"></span>, aqui você encontra alguns dos projetos que fiz com o objetivo de <em>validar</em> e <em>praticar</em> os conhecimentos que estou adquirindo. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi feito, clique em "Código fonte". Observação: <strong class="projetos_responsivos">Todos os projetos são responsivos.</strong></p>
             <div class="container-projetos">
                 <div class="card-projetos">
                     <h3>Calculadora</h3>
@@ -337,9 +338,9 @@
 
         <!-- SECTION CONTATO -->
         <section id="contato">
-            <p class="contato-user"></p>
+            <p class="mensagemPraUsuarioForm"></p>
             <form action="https://formsubmit.co/developer.gilberto@gmail.com" method="POST">
-                <h2>CONTATO PROFISSIONAL</h2>
+                <h2>CONTATO</h2>
                     <div class="container-label">
                         <label for="input-name">
                             <i class="ri-account-circle-line material-symbols-outlined"></i>
