atualizar ano direitos autorais dinamicamente

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             </p>
         </a>
         <p>&copy; Copy Right</p>
-        <p>All rights reserved 2023</p>
+        <p>All rights reserved <span class="ano_atual"></span></p>
 
         <!-- BOTÃO IR PARA TOPO -->
         <a href="#home">
