atualizei icones node, linux e git

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <i class="ri-html5-fill bx"></i>
                 <i class="ri-css3-fill bx"></i>
                 <i class="ri-javascript-fill bx"></i>
-                <img class="node_36x36px" src="./src/public/assets/icons/icons_remix/nodejs-line.svg" alt="Node.js">
+                <img class="node_36x36px" src="./src/public/assets/icons/icons_remix/nodejs-icon-blue36x36.svg" alt="Node.js">
             </div>
             <img class="img-dev-home" src="./src/public/assets/img/dev.png" alt="Developer">
         </section>
@@ -195,9 +195,9 @@
                         <i id="html" class="ri-html5-fill bx"></i>
                         <i id="css" class="ri-css3-fill bx"></i>
                         <i id="js" class="ri-javascript-fill bx"></i>
-                        <img id="node" class="node_36x36px" src="./src/public/assets/icons/icons_remix/nodejs-line96.svg" alt="Node.js">
-                        <img id="git" src="./src/public/assets/icons/icons_remix/git-logo-96.png" alt="Git">
-                        <img src="./src/public/assets/icons/icons_remix/tux-full.png" alt="linux" class="tux">
+                        <img id="node" class="node_36x36px" src="./src/public/assets/icons/icons_remix/nodejs-icon-green96x96.svg" alt="Node.js">
+                        <img id="git" src="./src/public/assets/icons/icons_remix/git-icon.svg" alt="Git">
+                        <img src="./src/public/assets/icons/icons_remix/linux-tux-icon.svg" alt="linux" class="tux">
                     </div>
                 </div>
                 <div class="container-soft-skills">
